Bug 136714 - mouse wheel over player window volume slider does not work properly
Summary: mouse wheel over player window volume slider does not work properly
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-02 16:07 UTC by Rodrigo Ventura
Modified: 2006-11-02 18:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rodrigo Ventura 2006-11-02 16:07:42 UTC
Version:           1.4.4 (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs
OS:                Linux

The mini volume slider in the playlist window does not work as expected. The slider either jumps to 0% or 100% whenever mouse wheel moves. However, mousewheel activity over the systray icon works fine!
Comment 1 Mark Kretschmann 2006-11-02 17:01:07 UTC
I can confirm this. Clearly a regression.
Comment 2 richlv 2006-11-02 17:34:02 UTC
unless i have misunderstood the bugreport, can't reproduce this in revision 601177.
fixed, depends on some libs or what ?
Comment 3 Mark Kretschmann 2006-11-02 18:26:58 UTC
SVN commit 601258 by markey:

Volume slider in the player window would not react correctly to the mouse wheel.

BUG: 136714


 M  +2 -0      ChangeLog  
 M  +7 -1      src/sliderwidget.cpp  


--- trunk/extragear/multimedia/amarok/ChangeLog #601257:601258
@@ -14,6 +14,8 @@
     * Amarok now saves playlists with relative paths by default.
 
   BUGFIXES:
+    * Volume slider in the player window would not react correctly to
+      the mouse wheel. (BR 136714)
     * When using a proxy set by script, context browser wouldn't work
       properly, and the application would crash when closing. (BR 112437)
     * Proxy settings wouldn't be respected when downloading podcast
--- trunk/extragear/multimedia/amarok/src/sliderwidget.cpp #601257:601258
@@ -53,7 +53,13 @@
 void
 Amarok::Slider::wheelEvent( QWheelEvent *e )
 {
-    // Position Slider
+    if( orientation() == Qt::Vertical ) {
+        // Will be handled by the parent widget
+        e->ignore();
+        return;
+    }
+
+    // Position Slider (horizontal)
     int step = e->delta() * 1500 / 18;
     int nval = QSlider::value() - step;
     nval = QMAX(nval, minValue());