Volume slider in the player window would not react correctly to the mouse wheel.

BUG: 136714

svn path=/trunk/extragear/multimedia/amarok/; revision=601258